
- Fix bug #3911, text area was scrolling to the left when saving. (Dale Anson)

- Fix bug #3599 Key typing in Install panel. Search Field gets focus on show
  and when one types '/' or a letter in the list. (Eric Le Lay)

- Fix bug #2877 "Hide installed" checkbox in Install panel. Don't re-install
  unloaded plugins (Eric Le Lay)

}}}
{{{ UI Improvements

- Scalable GUI for tip-of-the-day (Makarius)

- Scalable ColorWell icon according to UI font (Makarius)

- Proper L&F font for syntax style table (Patch #558 - Makarius)

- Proper row height default for JTable, JTree with 4K displays
  (Patches #557, #559, #562, #563 - Makarius)

- More font size choices for 4K and higher-res displays (Patch# 549 - Makarius)

- EOL marker character is a localizable property (view.eolMarkerChar),
  and an arrow (↩) instead of period (.) (#3902 - Alan Ezust)

- Proper button margins for Nimbus L&F (Patch #538 - Makarius)

- Floating dockables as JDialog (Patch #537 - Makarius)

- CompletionPopup should accept TAB for completion selection
  (Patch # 525 - Jakub Holý)

- Separated sorting of Buffer Sets and Buffer Switcher (Dale Anson)

- Font properties were not applied after change in Appearances settings
  (Bug #3919 - Dale Anson)

- Allow columns to be rearranged in FSB (Feature request 489, 40, and old
  tracker 1442812 - Dale Anson)

- Align gutter numbers with lines when using additional vertical line spacing.
  (Bug #3717 - Dale Anson)

- Added option to hide open files from recent file list (FR #481 - Dale Anson)

- UI adjustment to allow adding new mode files by point and click.
  (FR # 471 - Dale Anson)

- No error message when PluginManager doesn't find a file to be removed and
  show files to be removed in alphabetical order (end of Bug #3530 - Eric
  Le Lay)

- Plugin Manager Manage Panel sortable on all columns and all directions
 (Eric Le Lay)

}}}
{{{ Miscellaneous

- New Korean translation file (Patch #551 - yaraba)
